Moved result computation into the backend

--- a/assets/css/header.css
+++ b/assets/css/header.css
@@ -9,7 +9,7 @@
 }
 
 .site-header .banner .title {
-    font-size: 2rem;
+    font-size: 2em;
     font-weight: var(--bold-weight);
 }
 
@@ -18,19 +18,19 @@
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
-    padding: 1rem 1rem 0 1rem;
+    padding: 1em 1em 0 1em;
 
     border-bottom: var(--seperator);
 }
 
 .site-header div.banner a {
-    font-size: 1.5rem;
+    font-size: 1.5em;
     border: none;
 }
 
 .logo-large {
     display: block;
-    width: 14rem;
+    width: 8em;
     fill: var(--text);
 
     padding: 8px;
