--- a/assets/css/mobile.css
+++ b/assets/css/mobile.css
@@ -1,6 +1,6 @@
 @media screen and (max-width: 900px) {
-    body {
-        font-size: 1rem;
+    :root {
+        font-size: 12px;
     }
 
     main {
@@ -11,6 +11,6 @@
         margin-left: 0;
         margin-right: 0;
 
-        padding: 1.5rem;
+        padding: 1.5em;
     }
 }
