--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -35,6 +35,8 @@
     --border-radius: 5px;
 
     --seperator: 1px solid var(--line-color);
+
+    font-size: 21px;
 }
 
 * {
@@ -48,14 +50,13 @@ body {
     background-color: var(--background);
     color: var(--text);
     font-family: 'Ubuntu', sans-serif;
-    font-size: 1.4rem;
 
     display: flex;
     flex-direction: column;
     justify-content: space-between;
     align-items: center;
 
-    gap: 2rem;
+    gap: 2em;
 }
 
 main {
@@ -66,7 +67,7 @@ main {
     flex-direction: column;
     align-items: center;
 
-    padding: 0 2rem;
+    padding: 0 2em;
 
 }
 
@@ -74,7 +75,7 @@ footer {
     bottom: 0;
     left: 0;
     right: 0;
-    padding: 1rem;
+    padding: 1em;
     text-align: center;
 }
 
@@ -88,7 +89,7 @@ h1, h2, h3, h4, h5, h6, p {
 }
 
 h1 ~ *:not(h2), h2 ~ *:not(h3), h3 ~ *:not(h4), h4 ~ *:not(h5), h5 ~ *:not(h6) {
-    margin-top: 1.4rem;
+    margin-top: 1.4em;
 }
 
 p, a, button, h1, h2, h3, h4, h5, h6, li, span {
@@ -96,30 +97,30 @@ p, a, button, h1, h2, h3, h4, h5, h6, li, span {
 }
 
 p ~ h1, p ~ h2 {
-    margin-top: 3rem;
-    margin-bottom: .8rem;
+    margin-top: 3em;
+    margin-bottom: .8em;
 }
 
 p ~ h3, p ~ h4 {
-    margin-top: 2rem;
-    margin-bottom: .5rem;
+    margin-top: 2em;
+    margin-bottom: .5em;
 }
 
 p ~ h5, p ~ h6 {
-    margin-top: 1rem;
-    margin-bottom: .2rem;
+    margin-top: 1em;
+    margin-bottom: .2em;
 }
 
 h1 ~ p, h2 ~ p {
-    margin-top: .8rem;
+    margin-top: .8em;
 }
 
 h3 ~ p, h4 ~ p {
-    margin-top: .5rem;
+    margin-top: .5em;
 }
 
 h5 ~ p, h6 ~ p {
-    margin-top: .2rem;
+    margin-top: .2em;
 }
 
 p {
@@ -136,9 +137,9 @@ a {
 }
 
 i {
-    font-size: 2rem;
+    font-size: 2em;
     color: var(--text);
-    margin: 0 0.5rem;
+    margin: 0 0.5em;
 }
 
 img {
@@ -157,16 +158,16 @@ a:hover, button:hover {
 }
 
 button, a, p {
-    margin-bottom: 1rem;
+    margin-bottom: 1em;
 }
 
 a.more {
-    margin: 2rem 0;
+    margin: 2em 0;
     font-weight: var(--bold-weight);
 
     background-color: var(--primary);
     border-radius: 4px;
-    padding: 1rem 2rem;
+    padding: 1em 2em;
 }
 
 a.more:hover {
@@ -207,7 +208,7 @@ a.icon:hover {
     font-weight: var(--bold-weight);
     line-height: 1.5;
     text-align: center;
-    padding: 0.3rem 0.5rem;
+    padding: 0.3em 0.5em;
 
     width: 100%;
 
@@ -223,7 +224,7 @@ a.icon:hover {
     flex-direction: row;
     flex-wrap: wrap;
     justify-content: space-evenly;
-    gap: 2rem;
+    gap: 2em;
 
     padding: 0 2em;
 }
@@ -242,12 +243,12 @@ a.icon:hover {
 
     text-align: center;
 
-    margin: 1rem 0;
+    margin: 1em 0;
     
-    font-size: 1.5rem;
+    font-size: 1.5em;
     text-transform: capitalize;
     
-    padding: 1rem;
+    padding: 1em;
     margin: 0;
 }
 
@@ -262,11 +263,11 @@ a.icon:hover {
     justify-content: flex-start;
     flex-wrap: wrap;
     align-items: baseline;
-    gap: 0 .8rem;
+    gap: 0 .8em;
 
     border-bottom: var(--seperator);
 
-    margin-bottom: 1rem;
+    margin-bottom: 1em;
 }
 
 .path > a {
@@ -280,7 +281,7 @@ form {
     justify-content: center;
     align-items: flex-start;
 
-    margin: 2rem 1rem;
+    margin: 2em 1em;
 }
 
 form * {
@@ -288,5 +289,5 @@ form * {
 }
 
 form input[type=submit] {
-    margin-top: 1rem;
+    margin-top: 1em;
 }
