Adapted name and slogan

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -8,8 +8,8 @@
     <%- include('partials/header') %>
     <main>
         <div class="card">
-            <h2>Willkommen bei dem <%= title %>!</h2>
-            <h3>Uniwahlen 2024</h3>
+            <h2>Willkommen bei <%= title %></h2>
+            <h3>Infotool zur Uni-Wahl 2024</h3>
 
             <section>
                 <a class="link-block" href="/omat">Los geht's</a>
