--- a/views/omat-overview.ejs
+++ b/views/omat-overview.ejs
@@ -2,7 +2,7 @@
 <html lang="de">
 <head>
     <%- include('partials/site-head') %>
-    <title><%= title %> Übersicht</title>
+    <title><%= title %> - Übersicht</title>
     <link rel="stylesheet" href="/filehost/css/qacard.css">
     <link rel="stylesheet" href="/filehost/css/omat-overview.css">
 
