--- a/views/omat-result.ejs
+++ b/views/omat-result.ejs
@@ -2,7 +2,7 @@
 <html lang="de">
 <head>
     <%- include('partials/site-head') %>
-    <title><%= title %> Resultat</title>
+    <title><%= title %> - Resultat</title>
     <link rel="stylesheet" href="/filehost/css/qacard.css">
     <link rel="stylesheet" href="/filehost/css/omat-result.css">
 </head>
@@ -11,7 +11,7 @@
     <main>
         <div class="card">
             <div class="card-header">
-                <h1 class="card-header-title">Dein <%= title %>-Ergebnis</h1>
+                <h1 class="card-header-title">Dein "<%= title %>"-Ergebnis</h1>
 
                 <div class="card-header-buttons">
                     <!-- Share Button -->
