Sharepic erstmal auskommentiert

--- a/views/omat-result.ejs
+++ b/views/omat-result.ejs
@@ -22,9 +22,9 @@
                 </div>
                 <div class="card-header-buttons">
                     <!-- Share Button -->
-                    <button class="card-header-button share-button" disabled>
+                    <!-- <button class="card-header-button share-button" disabled>
                         <img src="/filehost/icons/download-solid.svg" alt="Herunterladen">
-                    </button>
+                    </button> -->
                 </div>
             </div>
 
