--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -3,9 +3,14 @@
 
 <header class="site-header">
     <div class="banner" role="banner">
-        <a href="/"><%= title %></a>
+        <div class="header-title">
+            <a href="/"><%= title %></a>
+            <p>
+                <%- include('user-counter') %> Studis vertrauten sich ihr bereits an
+            </p>
+        </div>
         <a id="header-logo" href="/" class="logo-large">
-            <img id="logo" class="uni-logo" alt="Stuve Konstanz" src="/filehost/images/stuve_logo.png" width="737" height="283">
+            <img id="logo" class="uni-logo" alt="StuVe Konstanz" src="/filehost/images/stuve_logo.png" width="737" height="283">
         </a>
     </div>
 </header>
