--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -147,6 +147,11 @@ img {
     height: auto;
 }
 
+video {
+    max-width: 100%;
+    max-height: 70vh;
+}
+
 a, button {
     font-weight: var(--bold-weight);
     border: none;
