--- a/assets/css/omat-result.css
+++ b/assets/css/omat-result.css
@@ -61,8 +61,8 @@ p.card-description {
 }
 
 div.percentage-container {
-    display: flex;
-    flex-direction: row;
+    display: grid;
+    grid-template-columns: 1fr 3em;
     margin: .5em 0;
     gap: 1em;
     justify-content: space-between;
@@ -77,7 +77,7 @@ div.percentage-container > span.percentage {
 div.percentage-container > p.percentage-text {
     margin: 0;
     font-weight: var(--bold-weight);
-    min-width: fit-content;
+    min-width: 5em;
     
     text-wrap: nowrap;
 }
