Modified target of anchor tags

--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,7 +1,7 @@
 <link rel="stylesheet" href="/filehost/css/footer.css">
 
 <footer>
-    <p>Mit Liebe gemacht von der <a href="https://www.stuve.uni-konstanz.de/kontakt/stuve-it/">StuVe IT</a></p>
+    <p>Mit Liebe gemacht von der <a href="https://www.stuve.uni-konstanz.de/kontakt/stuve-it/" target="_blank">StuVe IT</a></p>
     <div>
         <a href="/datenschutz">Datenschutzerklärung</a>
         <a href="/impressum">Impressum</a>
