--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -9,7 +9,7 @@
                 Schon von <%- include('user-counter') %> Studis benutzt!
             </p>
         </div>
-        <a id="header-logo" href="/" class="logo-large">
+        <a id="header-logo" href="https://stuve.uni-konstanz.de" target="_blank" class="logo-large">
             <img id="logo" class="uni-logo" alt="StuVe Konstanz" src="/filehost/images/stuve_logo.png" width="737" height="283">
         </a>
     </div>
